# puzzles

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CppTips.md  Dockerfile  MoreTips.md  README.md  max_subarray.cpp  palindromes.cpp  parens.cpp  source.cpp
AddBinary/: AddBinary.cpp  CMakeLists.txt
AddDigits/: AddDigits.cpp  CMakeLists.txt
AdventOfCode/: CMakeLists.txt  main.cpp
AdventOfCode/day07/: CMakeLists.txt  main.cpp
AdventOfCode/day08/: CMakeLists.txt  assembly_parser.cpp  assembly_parser.hpp  main.cpp
AdventOfCode/day09/: CMakeLists.txt  main.cpp
AdventOfCode/day10/: CMakeLists.txt  main.cpp
AdventOfCode/day11/: CMakeLists.txt  main.cpp
AdventOfCode/day12/: CMakeLists.txt  main.cpp
AdventOfCode/day13/: CMakeLists.txt  main.cpp
AdventOfCode/day14/: CMakeLists.txt  main.cpp
AdventOfCode/day15/: CMakeLists.txt
AdventOfCode/day16/: CMakeLists.txt  main.cpp
AdventOfCode/day17/: CMakeLists.txt  main.cpp
AdventOfCode/day18/: CMakeLists.txt  main.cpp
AdventOfCode/day19/: CMakeLists.txt  main.cpp
AdventOfCode/day20/: CMakeLists.txt  main.cpp
Arrays/: CMakeLists.txt
Arrays/3Sum/: 3Sum.cpp  CMakeLists.txt
Arrays/FindMin_RotatedSortedArrayII/: CMakeLists.txt  FindMin_RotatedSortedArrayII.cpp
Arrays/IslandPerimeter/: CMakeLists.txt  IslandPerimeter.cpp
BestTimeBuySellStocks/: BestTimeBuySellStocks.cpp  CMakeLists.txt
ClimbingStairs/: CMakeLists.txt  ClimbingStairs.cpp
CoinChange/: CMakeLists.txt  CoinChange.cpp
Common/: CMakeLists.txt
Common/Trees/: CMakeLists.txt  (+2 more)
ContainerArea/: heights.cpp
CutRods/: CMakeLists.txt  CutRods.cpp
DataStructures/: CMakeLists.txt
FindDuplicate/: CMakeLists.txt  FindDuplicate.cpp
FindItinerary/: CMakeLists.txt  FindItinerary.cpp
HIndex/: CMakeLists.txt  HIndex.cpp
IsPalindrome/: CMakeLists.txt  IsPalindrome.cpp
IsSubsequence/: CMakeLists.txt  IsSubsequence.cpp
LargestDivisibleSubset/: CMakeLists.txt  LargestDivisibleSubset.cpp
LengthOfLastWord/: CMakeLists.txt  LengthOfLastWord.cpp
LetterCombos/: letter_combos.cpp
LinkedLists/: CMakeLists.txt
Math/: CMakeLists.txt
MaxSubArray/: CMakeLists.txt  MaxSubArray.cpp  max_subarray.cpp
MaxTreeDepth/: CMakeLists.txt  MaxTreeDepth.cpp
MergeSortedArrays/: CMakeLists.txt  MergedSortedArrays.cpp
MergedLists/: mergedLists.cpp
MonthlyChallenge/: CMakeLists.txt
Numbers/: CMakeLists.txt
PascalsTriangle/: CMakeLists.txt  PascalsTriangle.cpp
PascalsTriangleII/: CMakeLists.txt  PascalsTriangleII.cpp
PerfectSquares/: CMakeLists.txt  PerfectSquares.cpp
PermutationSequence/: CMakeLists.txt  PermutationSequence.cpp
PlusOne/: CMakeLists.txt  PlusOne.cpp
PowerOfTwo/: CMakeLists.txt  PowerOfTwo.cpp
Primitives/: CMakeLists.txt
Primitives/ClosestIntegerSameWeight/: CMakeLists.txt  ClosestIntegerSameWeight.cpp
Primitives/CountBits/: CMakeLists.txt  CountBits.cpp
Primitives/Divide/: CMakeLists.txt  Divide.cpp
Primitives/Hamming/: CMakeLists.txt  Hamming.cpp
Primitives/IsPalindromeNumber/: CMakeLists.txt  IsPalindromeNumber.cpp
Primitives/IsRectangle/: CMakeLists.txt  IsRectangle.cpp
Primitives/Multiply/: CMakeLists.txt  Multiply.cpp
Primitives/Parity/: CMakeLists.txt  Parity.cpp
Primitives/Power/: CMakeLists.txt  Power.cpp
Primitives/RectangleIntersection/: CMakeLists.txt  RectangleIntersection.cpp
Primitives/Reverse/: CMakeLists.txt  Reverse.cpp
Primitives/ReverseBits/: CMakeLists.txt  ReverseBits.cpp
Primitives/SwapBits/: CMakeLists.txt  SwapBits.cpp
Primitives/UniformRandom/: CMakeLists.txt  UniformRandom.cpp
ProjectEuler/: CMakeLists.txt  ProjectEuler.cpp
QueueReconstruction/: CMakeLists.txt  QueueReconstruction.cpp
RandomPickWithWeight/: CMakeLists.txt  RandomPickWithWeight.cpp
RandomizedSet/: CMakeLists.txt  RandomizedSet.cpp
Recursion/: CMakeLists.txt
RemoveDuplicatesSorted/: CMakeLists.txt
ReverseString/: CMakeLists.txt  ReverseString.cpp
SameTree/: CMakeLists.txt  SameTree.cpp
SearchInsert/: CMakeLists.txt  SearchInsert.cpp
SingleNumber/: CMakeLists.txt
SingleNumberII/: CMakeLists.txt  SingleNumber.cpp  SingleNumberII.cpp
SortColors/: CMakeLists.txt  SortColors.cpp
Sqrt/: CMakeLists.txt  Sqrt.cpp
Strings/: CMakeLists.txt
SurroundedRegions/: CMakeLists.txt  SurroundedRegions.cpp
SymmetricTree/: CMakeLists.txt  SymmetricTree.cpp
TreeLevelOrderTraversal/: CMakeLists.txt  TreeLevelOrderTraversal.cpp
Trees/: CMakeLists.txt
Trees/BSTSearch/: BSTSearch.cpp  CMakeLists.txt
Trees/CountCompleteTreeNodes/: CMakeLists.txt  CountCompleteTreeNodes.cpp
Trees/InvertBinaryTree/: CMakeLists.txt  InvertBinaryTree.cpp
Trees/IsBalancedBST/: CMakeLists.txt  IsBalancedBST.cpp
Trees/MaxWidth/: CMakeLists.txt  MaxWidth.cpp
Trees/MinDepthBinary/: CMakeLists.txt  MinDepthBinary.cpp
Trees/PathSum/: CMakeLists.txt  PathSum.cpp
Trees/SumRootToLeaf/: CMakeLists.txt  SumRootToLeaf.cpp
Trees/TreeLevelOrderTraversal/: CMakeLists.txt  TreeLevelOrderTraversal.cpp
Trees/UniqueBSTs/: CMakeLists.txt  UniqueBSTs.cpp
TwoCityScheduling/: CMakeLists.txt  TwoCityScheduling.cpp
UniquePaths/: CMakeLists.txt  UniquePaths.cpp
ValidateIP/: CMakeLists.txt  ValidateIP.cpp
cvut/: README.md  exer_19.py  exer_2.py  exer_20.py  exer_3.py  exer_5.py  exer_6.py  exer_7.py  exer_8.py  exer_9.py
include/: Arrays.hpp  Design.hpp  DynamicProgramming.hpp  HashMaps.hpp  Heaps.hpp  LinkedLists.hpp  Primitives.hpp  Queues.hpp  Recursion.hpp  Search.hpp  Stacks.hpp  Strings.hpp  Trees.hpp
puzzles_ml/: arrays.ml  linked_lists.ml
puzzles_python/: puzzles.py
puzzles_rust/: Cargo.toml
src/: Arrays.cpp  Design.cpp  DynamicProgramming.cpp  HashMaps.cpp  Heaps.cpp  LinkedLists.cpp  Primitives.cpp  Queues.cpp  Recursion.cpp  Search.cpp  Stacks.cpp  Strings.cpp  Trees.cpp
test/: CMakeLists.txt
test/include/: ArraysTests.hpp
test/src/: ArraysTests.cpp  DesignTests.cpp  DynamicProgrammingTests.cpp  HashMapsTests.cpp  HeapTests.cpp  LinkedListsTests.cpp  PrimitivesTests.cpp  QueueTests.cpp  RecursionTests.cpp  SearchTests.cpp  StackTests.cpp  StringsTests.cpp  TreesTests.cpp  test.cpp
(+34 files in other folders)
