add_subdirectory(CountBits)
add_subdirectory(Parity)
add_subdirectory(SwapBits)
add_subdirectory(ReverseBits)
add_subdirectory(Hamming)
add_subdirectory(ClosestIntegerSameWeight)
add_subdirectory(Multiply)
add_subdirectory(Divide)
add_subdirectory(Power)
add_subdirectory(Reverse)
add_subdirectory(IsPalindromeNumber)
add_subdirectory(UniformRandom)