project(Common)

add_subdirectory(InvertBinaryTree)
add_subdirectory(BSTSearch)
add_subdirectory(IsBalancedBST)
add_subdirectory(MinDepthBinary)
add_subdirectory(PathSum)
add_subdirectory(CountCompleteTreeNodes)
add_subdirectory(UniqueBSTs)
add_subdirectory(SumRootToLeaf)
add_subdirectory(TreeLevelOrderTraversal)